--- a/Accidental_Drug_Related_Deaths_2012-2018.ipynb
+++ b/Accidental_Drug_Related_Deaths_2012-2018.ipynb
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**First**, import the data which is stored as a csv-file.\\\n",
+    "**First**, import the data which is stored as a csv-file.\n",
     "**Second**, let's take a look at some info of the dataset."
    ]
   },
@@ -402,14 +402,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command above tells us that there is no row that has only NaN values. So there is just missing info. We know that we have 5105 entries. Furthermore, we have 5099 entries, so only 6 deaths of whom the sex is unidentified. What we can do, is replace NaN in this column with \"unknown\". For that, take a look at the first row."
+    "The command above tells us that there is no row that has only NaN values. So, there is just missing info. We know that we have 5105 entries. Furthermore, we have 5099 entries, so only 6 deaths of whom the sex is unidentified. What we can do, is replace NaN in this column with \"unknown\". For that, take a look at the first row."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Usually, it would be interesting to know geometric data, that is, if there locations where deaths reach a significantly high number. However, within this data, there is too much missing info. And since a city by name can exist in several states like Portland, Oregon and Portland, Maine, these infos will not used. Thus, these columns can be erased."
+    "Usually, it would be interesting to know geometric data, that is, if there are locations where deaths reach a significantly high number. However, within this data, there is too much missing info. And since a city by name can exist in several states like Portland, Oregon and Portland, Maine, these infos will not used. Thus, these columns can be erased."
    ]
   },
   {
