--- a/Accidental_Drug_Related_Deaths_2012-2018.ipynb
+++ b/Accidental_Drug_Related_Deaths_2012-2018.ipynb
@@ -402,7 +402,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The command above tells us that there is no row that has only NaN values. So, there is just missing info. We know that we have 5105 entries. Furthermore, we have 5099 entries, so only 6 deaths of whom the sex is unidentified. What we can do, is replace NaN in this column with \"unknown\". For that, take a look at the first row."
+    "The command above tells us that there is no row that has only NaN values. So, there is just missing info. We know that we have 5105 entries. Furthermore, we have 5099 entries in **sex**, so only 6 deaths of whom the sex is unidentified. What we can do, is replace NaN in this column with \"unknown\". For that, take a look at the first row."
    ]
   },
   {
